edit dashboard schedule